[gd_scene load_steps=10 format=2]

[ext_resource path="res://actors/enemies/ground_bug.tscn" type="PackedScene" id=1]
[ext_resource path="res://actors/enemies/boss_bug/boss_bug.gd" type="Script" id=2]
[ext_resource path="res://actors/cutout_character/boss_bug/boss_bug.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/enemies/bugs.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/enemies/particles/boss_aura.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 80, 40 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 320.0

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 88.0

[sub_resource type="CircleShape2D" id=4]

custom_solver_bias = 0.0
radius = 104.307

[node name="boss_bug" instance=ExtResource( 1 )]

script = ExtResource( 2 )
health = 25
bugs_spawn = 5
score = 250

[node name="shape" parent="." index="0"]

position = Vector2( -8, 45 )
shape = SubResource( 1 )

[node name="shape" parent="area" index="0"]

shape = SubResource( 2 )

[node name="shape" parent="attach_area" index="0"]

position = Vector2( -8, 24 )
shape = SubResource( 3 )

[node name="sprite" parent="." index="3"]

texture = null
_sections_unfolded = [ "Mouse", "Textures", "Transform", "Visibility" ]

[node name="cutout_character" parent="sprite" index="0" instance=ExtResource( 3 )]

_sections_unfolded = [ "Transform", "Visibility" ]

[node name="bugs" parent="." index="5" instance=ExtResource( 4 )]

position = Vector2( 0, 8 )

[node name="boss_aura" parent="." index="7" instance=ExtResource( 5 )]

position = Vector2( 0, 8 )

[node name="shape" parent="bounce_area" index="0"]

position = Vector2( -8, 24 )
shape = SubResource( 4 )

[connection signal="health_changed" from="." to="." method="_on_health_changed"]

[connection signal="state_changed" from="." to="." method="_on_state_changed"]


